--- a/Atv-Aula-03/Tela-Cadastro.html
+++ b/Atv-Aula-03/Tela-Cadastro.html
@@ -16,10 +16,10 @@
  <div class="container">
     <h1>AcquaTec</h1>
      <ul class="navbar">
-        <li class="agora"><a href="Index.html">Inicio</a></li>
+        <li ><a href="Index.html">Inicio</a></li>
         <li><a href="#">Simulador</a></li>
-        <li class="agora"><a href="Tela-login.html">Login</a></li>
-        <li><a href="Tela-Cadastro.html">Cadastro</a></li>
+        <li><a href="Tela-login.html">Login</a></li>
+        <li><a class="agora" href="Tela-Cadastro.html">Cadastro</a></li>
         </ul>
        </div>
      </div>
@@ -49,7 +49,7 @@
      <input type="password" id="input_senhaConfirm" placeholder="Confirme sua Senha">
 
 
-    <button type = "button"> Entrar </button>
+    <button type = "button"> Registrar </button>
 
     </form>
 
