--- a/Atv-Aula-03/Tela-login.html
+++ b/Atv-Aula-03/Tela-login.html
@@ -16,7 +16,7 @@
  <div class="container">
     <h1>AcquaTec</h1>
      <ul class="navbar">
-        <li class="agora"><a href="Index.html">Inicio</a></li>
+        <li><a href="Index.html">Inicio</a></li>
         <li><a href="#">Simulador</a></li>
         <li class="agora"><a href="Tela-login.html">Login</a></li>
         <li><a href="Tela-Cadastro.html">Cadastro</a></li>
