--- a/Atv-Aula-03/Index.html
+++ b/Atv-Aula-03/Index.html
@@ -14,7 +14,7 @@
     <ul class="navbar">
         <li class="agora"><a href="Index.html">Inicio</a></li>
         <li><a href="#">Simulador</a></li>
-        <li class="agora" ><a href="Tela-login.html">Login</a></li>
+        <li><a href="Tela-login.html">Login</a></li>
         <li><a href="Tela-Cadastro.html">Cadastro</a></li>
     </ul>
   </div>
